[gd_scene load_steps=4 format=1]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://freeknight/png/Idle (1).png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 19.0325 )

[node name="PlayerNode" type="Node2D"]

[node name="KinematicPlayerBody" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.3138, 0, 0, 1.13852, -1.48771, 1.79415 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicPlayerBody"]

transform/pos = Vector2( -0.648895, -2.34215 )
transform/scale = Vector2( 0.0863837, 0.0863836 )
texture = ExtResource( 2 )

[node name="Ground_Ray" type="RayCast2D" parent="KinematicPlayerBody"]

enabled = true
cast_to = Vector2( 0, 25 )
layer_mask = 2
type_mask = 15

[node name="Ground_Ray1" type="RayCast2D" parent="KinematicPlayerBody"]

transform/pos = Vector2( 11.5, 0 )
enabled = true
cast_to = Vector2( 0, 25 )
layer_mask = 2
type_mask = 15

[node name="Ground_Ray2" type="RayCast2D" parent="KinematicPlayerBody"]

transform/pos = Vector2( -14.3, 0 )
enabled = true
cast_to = Vector2( 0, 25 )
layer_mask = 2
type_mask = 15

[node name="PlayerBody" type="CollisionShape2D" parent="KinematicPlayerBody"]

transform/pos = Vector2( -1.48771, 1.79415 )
transform/scale = Vector2( 1.3138, 1.13852 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0


